# veyon_macos

./: .replit  replit.md
veyon-4.10.0/: CMakeLists.txt  CONTRIBUTORS  INSTALL_MACOS.md  install_macos.sh
veyon-4.10.0/configurator/: CMakeLists.txt
veyon-4.10.0/master/: CMakeLists.txt
veyon-4.10.0/plugins/platform/: CMakeLists.txt
veyon-4.10.0/plugins/platform/macos/: CMakeLists.txt  MacOSCoreFunctions.cpp  MacOSCoreFunctions.h  MacOSFilesystemFunctions.cpp  MacOSFilesystemFunctions.h  MacOSInputDeviceFunctions.cpp  MacOSInputDeviceFunctions.h  MacOSKeyboardShortcutTrapper.h  MacOSNetworkFunctions.cpp  MacOSNetworkFunctions.h  MacOSPlatformConfiguration.h  MacOSPlatformConfigurationPage.cpp  MacOSPlatformConfigurationPage.h  MacOSPlatformConfigurationPage.ui  MacOSPlatformPlugin.cpp  MacOSPlatformPlugin.h  MacOSServerProcess.cpp  MacOSServerProcess.h  MacOSServiceCore.cpp  MacOSServiceCore.h  MacOSServiceFunctions.cpp  MacOSServiceFunctions.h  MacOSSessionFunctions.cpp  MacOSSessionFunctions.h  MacOSUserFunctions.cpp  MacOSUserFunctions.h  macos.qrc
veyon-4.10.0/service/: CMakeLists.txt  io.veyon.service.plist.in
